examples/bad/ERROR_NOT_A_RECORD/func_is_not_a_record.st
language core;
extend with #records;

fn main(f : (fn(Nat) -> Bool)) -> Nat {
  return f.field
}
//ERROR_NOT_A_RECORD
